Fixing horiz scroll on tablet.

--- a/sites/all/themes/dcco2013/css/dcco2013-alpha-default-narrow.css
+++ b/sites/all/themes/dcco2013/css/dcco2013-alpha-default-narrow.css
@@ -4,7 +4,7 @@
  *  and widescreen CSS files as appropriate. */
 
 .site-wrapper {
-  width: 800px;
+  width: 100%;
   margin: 0 auto;
   background-color: #aa3320;
   -moz-box-shadow:    0px 0px 5px 2px #222;
